# Diploma_project_PD12

./: .env.deploy  Dockerfile  README.MD  docker-compose-ci.yaml  docker-compose.yml  docker-compose_sample.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: action.yaml
Diploma_project_PD12/: asgi.py  settings.py  urls.py  wsgi.py
bot/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
bot/management/: bot_controller.py  finite_state_machine.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_rename_user_id_telegramuser_user.py  0003_alter_telegramuser_options_and_more.py  0004_alter_telegramuser_tg_username.py
bot/tg/: client.py  dc.py
core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_options.py
diploma_project_pd12/: asgi.py  settings.py  urls.py  wsgi.py
goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_remove_goal_is_deleted.py  0005_alter_goalcomment_text.py  0006_board_goalcategory_board_boardparticipant.py  0007_create_new_objects.py  0008_alter_goalcategory_board.py  0009_rename_name_board_title_alter_boardparticipant_board_and_more.py  0010_alter_goal_category_alter_goalcomment_goal.py
goals/models/: board.py  goal.py  goal_category.py  goal_comment.py  mixins.py
goals/serializers/: board.py  category.py  comment.py  goal.py
goals/views/: board.py  category.py  comment.py  goal.py
tests/: conftest.py  factories.py  fixtures.py
tests/core/: serializer_test.py  view_test.py
tests/goals/board/: board_create_test.py  board_delete_test.py  board_list_test.py  board_retrieve_test.py  board_update_test.py
tests/goals/category/: category_create_test.py  category_delete_test.py  category_list_test.py  category_retrieve_test.py  category_update_test.py
tests/goals/comment/: comment_create_test.py  comment_delete_test.py  comment_list_test.py  comment_retrieve_test.py  comment_update_test.py
tests/goals/goal/: goal_create_test.py  goal_delete_test.py  goal_list_test.py  goal_retrieve_test.py  goal_update_test.py
