[tool.poetry]
name = "Diploma-project-pd12"
version = "0.1.0"
description = "todolist for SkyPro diploma project"
authors = ["Stanislav Meshcheriakov"]
readme = "README.md"
packages = [{include = "diploma_project_pd12"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^1.0.0"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
