[tool.poetry]
name = "Diploma-project-pd12"
version = "0.1.0"
description = "todolist for SkyPro diploma project"
authors = ["Stanislav Meshcheriakov"]
readme = "README.md"
packages = [{include = "diploma_project_pd12"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^1.0.0"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.1"
social-auth-app-django = "^5.2.0"
django-filter = "^23.1"
marshmallow = "^3.19.0"
marshmallow-dataclass = "^8.5.13"
transitions = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
